feat: add is_playing key in team group APIs
